test/e2e/testdata/validating-admission-policy-binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: must-gather-sa-authorization
  labels:
    test: non-admin-must-gather-e2e
spec:
  policyName: must-gather-sa-authorization
  validationActions:
  - Deny
